Missing synchronization when reading counters for live threads and peak thread count

XMLWordPrintable

    • svc
    • b18

        While analysing the reasons for the intermittent failures of java/lang/management/ThreadMXBean/ResetPeakThreadCount.java test it turned out that there are, indeed, places where the counters for live threads and peak thread count are being read without any synchronization in place - at the same time all the writes are synchronized by Threads_lock.

        See the discussion thread (http://mail.openjdk.java.net/pipermail/serviceability-dev/2013-July/010709.html) for more details.

              Assignee:
              Dean Long
              Reporter:
              Jaroslav BachorĂ­k
              Votes:
              0 Vote for this issue
              Watchers:
              14 Start watching this issue

                Created:
                Updated:
                Resolved: