8021335: Missing synchronization when reading counters for live threads and peak thread count

Reviewed-by: dholmes, mchung